updated html, css, and js - animation logic partial complete

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>Drawvisuals</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
+		<link rel="stylesheet" type="text/css" href="./assets/styles/styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<meta name="keywords" content="Designer, World Class Designer, Creative Director, WebDesign">
 		<meta name="description" content="Designer, Creative Director">
@@ -16,7 +16,7 @@
 
 		<header>
 
-				<img class="logo_drawvisuals" src="assets/images_videos/logo_drawvisuals.png">
+				<img class="logo_drawvisuals" src="./assets/images/logo_drawvisuals.png">
 				<a class="email-header" href="mailto:info@untold.com">Email Me</a>
 		
 
@@ -47,8 +47,6 @@
 			
 			<div class="black-effect"></div>
 			<div class="img-projeto"></div>
-			
-
 
 			<div class="section-about">
 				<div class="about-content">
@@ -63,5 +61,5 @@
 		</div>
 
 		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-		<script src="custom.js"></script>
+		<script src="./assets/scripts/custom.js"></script>
 	</body>
