experimental version onepage website

--- a/app/index.html
+++ b/app/index.html
@@ -35,18 +35,22 @@
 
 				<nav class="projects-nav">
 					<ul class="group">
-						<li><a href="#" class="roger">Roger Dubuis</a></li>
-						<li><a href="#" id="jemimah">Jemimah Barnett</a></li>
-						<li><a href="#" id="polar">PolarCamp</a></li>
-						<li><a href="#" id="invitly">Invitly</a></li>
-						<li><a href="#" id="lexani">Lexani Motorcars</a></li>
+						<li><a href="#" id="roger" class="roger">Roger Dubuis</a></li>
+						<li><a href="#" id="jemimah" class="jemimah">Jemimah Barnett</a></li>
+						<li><a href="#" id="polar" class="polar">PolarCamp</a></li>
+						<li><a href="#" id="invitly" class="invitly">Invitly</a></li>
+						<li><a href="#" id="lexani" class="lexani" >Lexani Motorcars</a></li>
 					</ul>
 				</nav>
 
 			</div>
 			
 			<div class="black-effect"></div>
-			<div class="img-projeto"></div>
+			<div class="img-dubois"></div>
+			<div class="img-jemimah"></div>
+			<div class="img-polar"></div>
+			<div class="img-invitly"></div>
+			<div class="img-lexani"></div>
 
 			<div class="section-about">
 				<div class="about-content">
